force-app/main/default/objects/Promotion_dywtbas__c/Promotion_dywtbas__c.object-meta.xml
<CustomObject>
    <description>Where is this asset promoted?</description>
    <label>Promotion</label>
    <nameField>
        <displayFormat>P-{0000}</displayFormat>
        <label>Promotion Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Promotions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>