force-app/main/default/objects/Promotion_dywtbas__c/fields/Asset_dywtbas__c.field-meta.xml
<CustomField>
    <fullName>Asset_dywtbas__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Related lookup to a specific asset record</description>
    <label>Asset</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Promotions</relationshipLabel>
    <relationshipName>Promotions</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>