force-app/main/default/objects/Promotion_dywtbas__c/fields/Campaign_ID_dywtbas__c.field-meta.xml
<CustomField>
    <fullName>Campaign_ID_dywtbas__c</fullName>
    <description>A specific campaign ID associated with one asset and one tactic</description>
    <label>Campaign ID</label>
    <length>90</length>
    <type>Text</type>
</CustomField>