force-app/main/default/objects/Promotion_dywtbas__c/fields/Tactic_dywtbas__c.field-meta.xml
<CustomField>
    <fullName>Tactic_dywtbas__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Related lookup to a specific tactic</description>
    <label>Tactic</label>
    <referenceTo>Tactic_dywtbas__c</referenceTo>
    <relationshipLabel>Promotions</relationshipLabel>
    <relationshipName>Promotions</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>